--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Chilling Cafe by Tooplate</title>
+    <title>TechCafe</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600&display=swap" rel="stylesheet" />
     <link href="fontawesome/css/all.min.css" rel="stylesheet" />
     <link href="css/tooplate-chilling-cafe.css" rel="stylesheet" />
@@ -17,7 +17,7 @@ https://www.tooplate.com/view/2118-chilling-cafe
     <div class="tm-container">
       <div class="tm-text-white tm-page-header-container">
         <i class="fas fa-mug-hot fa-2x tm-page-icon"></i>
-        <h1 class="tm-page-header">Chilling Cafe</h1>
+        <h1 class="tm-page-header">TechCafe- Version 1.1</h1>
       </div>
       <div class="tm-main-content">
         <div id="tm-intro-img"></div>
